<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.HomeActivity">

    <include layout="@layout/progress_bar"
        android:visibility="gone"/>

    <View
        android:id="@+id/anchor"
        android:layout_width="16dp"
        android:layout_height="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize"
        android:text="@string/welcome_template"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_balance"
        style="@style/CustomButton"
        android:text="@string/balance"
        app:layout_constraintEnd_toStartOf="@+id/anchor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

    <Button
        android:id="@+id/btn_send_money"
        style="@style/CustomButton"
        android:text="@string/send_money"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/anchor"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

    <Button
        android:id="@+id/btn_view_statement"
        style="@style/CustomButton"
        android:text="@string/view_statement"
        app:layout_constraintEnd_toEndOf="@+id/btn_balance"
        app:layout_constraintStart_toStartOf="@+id/btn_balance"
        app:layout_constraintTop_toBottomOf="@+id/btn_balance" />

    <Button
        android:id="@+id/btn_last_txn"
        style="@style/CustomButton"
        android:text="@string/last_txn"
        app:layout_constraintEnd_toEndOf="@+id/btn_send_money"
        app:layout_constraintStart_toStartOf="@+id/btn_send_money"
        app:layout_constraintTop_toBottomOf="@+id/btn_send_money" />

    <Button
        android:id="@+id/btn_profile"
        style="@style/CustomButton"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="@+id/btn_view_statement"
        app:layout_constraintStart_toStartOf="@+id/btn_view_statement"
        app:layout_constraintTop_toBottomOf="@+id/btn_view_statement" />

    <Button
        android:id="@+id/btn_logout"
        style="@style/CustomButton"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="@+id/btn_last_txn"
        app:layout_constraintStart_toStartOf="@+id/btn_last_txn"
        app:layout_constraintTop_toBottomOf="@+id/btn_last_txn" />

</androidx.constraintlayout.widget.ConstraintLayout>